--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet"> 
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nwl</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -21,7 +27,7 @@
 
                 <ul>
                     <li>
-                        <a target="_blank" href="https://www.twitch.tv/directory/game/League%20of%20Legends"><img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="League of Legends"></a>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/League%20of%20Legends"><img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-285x380.jpg" alt="League of Legends"></a>
                     </li>
                     <li>
                         <a target="_blank" href="https://www.twitch.tv/directory/game/FIFA%2022"><img src="https://static-cdn.jtvnw.net/ttv-boxart/1869092879_IGDB-285x380.jpg" alt="Fifa 22"></a>
